--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "moment": "^2.18.1",
     "normalize.css": "^5.0.0",
     "vue": "^2.3.4",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
